[package]
name = "rsomics-closeness-vitality"
version = "0.1.1"
description = "Closeness vitality of nodes in an undirected, unweighted graph — value-exact networkx 3.6.1 equivalent"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-closeness-vitality"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["centrality", "graph", "network", "bioinformatics", "networkx"]
readme = "README.md"

[[bin]]
name = "rsomics-closeness-vitality"
path = "src/main.rs"

[lib]
name = "rsomics_closeness_vitality"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false
